# Exam_Result_Summarizer_Notifier

./: .env.example  .gitignore  HF_SETUP_GUIDE.md  LLM_QUICK_REFERENCE.md  README.md  database.db  hugging_face_api_key  main.py  pyproject.toml  test_llm.py
app/: __init__.py  models.py
app/routes/: auth.py  dashboard.py  feedback.py  notifications.py  results.py  upload.py
app/services/: classifier.py  csv_parser.py  email_service.py  llm_service.py  summary.py
app/static/css/: style.css
app/static/js/: charts.js
app/templates/: 404.html  base.html  dashboard.html  exam_detail.html  feedback.html  login.html  notifications.html  results.html  upload.html
samples/: civil_engineering_semester.csv  electronics_struggling.csv  mathematics_midterm.csv  physics_quiz.csv  sample_exam_results.csv  web_development_final.csv
uploads/: 20260428_115002_students.csv  20260428_115043_data.csv  20260428_115059_data.csv  20260428_115116_data.csv  20260428_115254_biology_advanced_small.csv
